--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Sat Nov 29 06:22:36 2003  Tim Janik  <timj@gtk.org>
+
+	* glib-extra.h: implemented GBitMatrix, a couple inline functions to
+	allow quick operations on a two dimensional bit array.
+
 Fri Nov 28 03:37:16 2003  Tim Janik  <timj@gtk.org>
 
 	* glib-extra.h: preserve type safety in convenience functions for c++.
