--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,39 @@
+Sun Nov 30 02:44:27 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/gxk/gxkrackeditor.[hc]: shrink resize anchors to 3/4 of the
+	cell size. moved remaining editing fields from GxkRackTable into
+	GxkRackEditor.
+	(rack_table_update_rframe): remove corner checks.
+	(gxk_rack_table_handle_button_press): merged resizing and movement
+	logic. do movement without extra dnd window. added simple logic
+	for corner detection.
+	(rack_table_editor_drag_corner): added movement logic, added boundary
+	checks. added logic for incremental boundary approximation.
+	(gxk_rack_table_handle_motion_notify): merged resizing and movement.
+	(rack_table_abort_drag): get rid of drag_window. redraw drag area to
+	cleanup highlighting left overs.
+	(gxk_rack_table_handle_button_release): merge resize and movement.
+	(gxk_rack_table_set_edit_mode): get rid of drag_window.
+	(gxk_rack_table_check_area): added boolean to check frame areas. added
+	exempt widget.
+
+	* beast-gtk/gxk/gxkrackitem.[hc]:
+	(gxk_rack_item_add):
+	(gxk_rack_item_remove): override container methods to update
+	empty_frame flag.
+	(update_frame): honour empty_frame.
+	(gxk_rack_item_size_allocate): override GtkFrame size_allocate to
+	fix up label widget allocation and to center frame within cells.
+
+	* beast-gtk/gxk/gxkracktable.[hc]: fixup default requisition,
+	removed remaining editing fields.
+	(gxk_rack_table_translate): renamed this function.
+	(gxk_rack_table_find_child): find child within widget coordinates,
+	based on cell coordinates.
+	(gxk_rack_table_get_child_area): query cell coordinates.
+
+	* beast-gtk/gxk/gxksimplelabel.c: make this visible by default.
+
 Sat Nov 29 17:19:22 2003  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bsw/bswcxxutils.h tests/Makefile.am: Added bsw/bswcxxutils.h, which
