--- a/docs/site-links-synthesis.texi
+++ b/docs/site-links-synthesis.texi
@@ -87,7 +87,7 @@ Selected @uref{http://www.soundonsound.com,,Sound On Sound} Articles:
 	@uref{http://www.soundonsound.com/sos/Mar03/articles/synthsecrets47.asp,,Part47}
 	@uref{http://www.soundonsound.com/sos/apr03/articles/synthsecrets48.asp,,Part48}
 	@uref{http://www.soundonsound.com/sos/May03/articles/synthsecrets49.asp,,Part49}
-	@c @uref{http://www.soundonsound.com/sos/Jun03/articles/synthsecrets50.asp,,Part50}
+	@uref{http://www.soundonsound.com/sos/Jun03/articles/synthsecrets50.asp,,Part50}
 	@c @uref{http://www.soundonsound.com/sos/Jul03/articles/synthsecrets51.asp,,Part51}
 @end itemize
 
