--- a/po/nl.po
+++ b/po/nl.po
@@ -3,7 +3,7 @@
 # Copyright (C) 2003 THE beast'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the beast package.
 # Vincent van Adrighem <adrighem@gnome.org>, 2003.
-# Vincent van Adrighem <adrighem@gnome.org>, 2003.
+# Vincent van Adrighem <V.vanAdrighem@dirck.mine.nu>, 2003.
 #
 #
 msgid ""
@@ -13,7 +13,7 @@ msgstr ""
 "POT-Creation-Date: 2003-12-04 03:10+0100\n"
 "PO-Revision-Date: 2003-11-24 03:45+0100\n"
 "Last-Translator: Vincent van Adrighem <adrighem@gnome.org>\n"
-"Language-Team: Dutch <adrighem@gnome.org>\n"
+"Language-Team: Dutch <vertaling@nl.linux.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
