CVS copied here from beast-gtk/.
Fri Dec  5 01:41:00 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkparam-choice.c:
	* beast-gtk/gxk/gxkparam-entry.c:
	* beast-gtk/gxk/gxkparam-label.c:
	* beast-gtk/gxk/gxkparam-proxy.c:
	* beast-gtk/gxk/gxkparam-scale.c:
	* beast-gtk/gxk/gxkparam-spinner.c:
	* beast-gtk/gxk/gxkparam-strnum.c:
	* beast-gtk/gxk/gxkparam-toggle.c:
	* beast-gtk/gxk/gxkparam.c:
	* beast-gtk/gxk/gxkparam.h: CVS copied here from beast-gtk/.

svn path=/trunk/; revision=1615

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Fri Dec  5 01:41:00 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/gxk/gxkparam-choice.c:
+	* beast-gtk/gxk/gxkparam-entry.c:
+	* beast-gtk/gxk/gxkparam-label.c:
+	* beast-gtk/gxk/gxkparam-proxy.c:
+	* beast-gtk/gxk/gxkparam-scale.c:
+	* beast-gtk/gxk/gxkparam-spinner.c:
+	* beast-gtk/gxk/gxkparam-strnum.c:
+	* beast-gtk/gxk/gxkparam-toggle.c:
+	* beast-gtk/gxk/gxkparam.c:
+	* beast-gtk/gxk/gxkparam.h: CVS copied here from beast-gtk/.
+
 Fri Dec  5 00:28:12 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstrackview.[hc]: started new SynthNet view, based on a
