--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-05   Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Dutch translation updated by Tino Meinen.
+
 2003-12-04   Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Dutch translation updated by Vincent van Adrighem.
