--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,7 @@
+Mon Dec  8 16:38:32 2003  Tim Janik  <timj@gtk.org>
+
+	* sfinote.c (sfi_note_from_string_err): error handling fixup.
+
 Sat Dec  6 02:36:49 2003  Tim Janik  <timj@gtk.org>
 
 	* glib-extra.[hc]: added (moved from sfi)
