--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+Wed Dec 10 19:27:33 2003  Tim Janik  <timj@gtk.org>
+
+	* ltmain.sh: update to libtool 1.5.0a + debian patches.
+	
+	* beast-gtk/bstutils.[hc]: emove atail and ahead slots from gmask.
+	removed BST_GMASK_FILL, bst_gmask_quick() simply uses BST_GMASK_INTERLEAVE.
+
+	* beast-gtk/gxk/gxkauxwidgets.c: added second arrow to menu button.
+
+	* beast-gtk/bstwaveeditor.c: change default zoom level to 0.5.
+
+	* beast-gtk/bstfreeradiobutton.[hc]: removed, there's a freely
+	togglable radio button in Gxk.
+
 Wed Dec 10 08:34:10 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/gxk/Makefile.am: define GXK_COMPILATION when compiling GXK.
