--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Thu Dec 11 00:25:39 2003  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/dialogs/gadgets-standard.xml: don't create labels
+	from $label for xdef:button if ignore-label is set.
+	set ignore-label for xdef:labeled-tool-area and xdef:label-image-button,
+	since they create their own labels from $label.
+
 Wed Dec 10 19:27:33 2003  Tim Janik  <timj@gtk.org>
 
 	* ltmain.sh: update to libtool 1.5.0a + debian patches.
