--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,14 @@
+Sat Dec 13 19:09:47 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* sfidl-parser.*: Support parsing for i18n'd strings in property
+	groups, stream and info declarations.
+
+	* sfidl-generator.* sfidl-module.*: Write out i18n'd strings when
+	required by the IDL file.
+
+	* testidl.idl: The syntax 'property "X-Group" Real y;' for groups is
+	no longer supported.
+
 Wed Dec 10 09:20:33 2003  Tim Janik  <timj@gtk.org>
 
 	* sfinote.c: support parsing upper and lower case notes.
