--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,6 @@
 2003-12-13  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
-	* es.po: Updated Spanish translation by Ismael Andrés Rubio Rojas
+	* es.po: Updated Spanish translation by Ismael AndrÃ©s Rubio Rojas
 
 2003-12-11  Duarte Loreto <happyguy_pt@hotmail.com>
 
