*po/es.po: Updated Spanish translation *po-bse/es.po: Added Spanish
2004-12-14  Francisco F. Serrador  <serrador@cvs.gnome.org>

	*po/es.po: Updated Spanish translation
	*po-bse/es.po: Added Spanish translation

svn path=/trunk/; revision=1640

--- a/po-bse/ChangeLog
+++ b/po-bse/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-14  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Added Spanish translation.
+
 2003-11-24  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Updated dutch translation.
