--- a/docs/site-links-synthesis.texi
+++ b/docs/site-links-synthesis.texi
@@ -88,7 +88,12 @@ Selected @uref{http://www.soundonsound.com,,Sound On Sound} Articles:
 	@uref{http://www.soundonsound.com/sos/apr03/articles/synthsecrets48.asp,,Part48}
 	@uref{http://www.soundonsound.com/sos/May03/articles/synthsecrets49.asp,,Part49}
 	@uref{http://www.soundonsound.com/sos/Jun03/articles/synthsecrets50.asp,,Part50}
-	@c @uref{http://www.soundonsound.com/sos/Jul03/articles/synthsecrets51.asp,,Part51}
+	@uref{http://www.soundonsound.com/sos/Jul03/articles/synthsecrets51.asp,,Part51}
+	@c @uref{http://www.soundonsound.com/sos/aug03/articles/synthsecrets.htm,,Part52}
+	@c @uref{http://www.soundonsound.com/sos/sep03/articles/synthsecrets.htm,,Part53}
+	@c @uref{http://www.soundonsound.com/sos/oct03/articles/synthsecrets.htm,,Part54}
+	@c @uref{http://www.soundonsound.com/sos/nov03/articles/synthsecrets.htm,,Part55}
+	@c @uref{http://www.soundonsound.com/sos/dec03/articles/synthsecrets.htm,,Part56}
 @end itemize
 
 
